syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = "./;proto";

// protoc -I . inventory.proto --go_out=plugins=grpc:.

service Inventory {

  rpc SetInv(GoodsInvInfo) returns (google.protobuf.Empty); // 设置库存
  rpc InvDetail(GoodsInvInfo) returns (GoodsInvInfo); // 获取库存信息
  rpc Sell(SellInfo) returns (google.protobuf.Empty); // 销售；下单扣除库存 支持批量
  rpc Reback(SellInfo) returns (google.protobuf.Empty);  // 库存归还

}

message GoodsInvInfo {
  int32 goodsId = 1;
  int32 num = 2;
}

message SellInfo {
  repeated GoodsInvInfo goodsInfo = 1;
}